objects/QIDC__MDM_Removed_Entities_ims__c.object
<CustomObject>
    <description>This Object is used for Storing Removed Entity Events</description>
    <fields>
        <fullName>QIDC__Entity_SFID_ims__c</fullName>
        <description>This field is used to store Entity SFDC ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store Entity SFDC ID</inlineHelpText>
        <label>Entity SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Entity_URI_ims__c</fullName>
        <description>This field is used to store the MDM entity URI</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the MDM entity URI</inlineHelpText>
        <label>Entity URI</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Event_Type_ims__c</fullName>
        <description>This field is used to store the MDM event type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the MDM event type.</inlineHelpText>
        <label>Event Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Last_Updated_Time_ims__c</fullName>
        <description>This field is used to store the entity updated time in MDM</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store the entity updated time in MDM</inlineHelpText>
        <label>Last Updated Time</label>
        <type>DateTime</type>
    </fields>
    <label>MDM_Removed_Entities</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Removed_Entity_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Removed_Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>